[chromium] The root layer should not try create a second RenderSurface for itself https://bugs.webkit.org/show_bug.cgi?id=91124

Reviewed by Adrienne Walker.

Source/WebCore:

Tests: CCLayerTreeHostImplTest.rootLayerDoesntCreateExtraSurface

* platform/graphics/chromium/cc/CCLayerTreeHostCommon.cpp:
(WebCore::subtreeShouldRenderToSeparateSurface):

Source/WebKit/chromium:

* tests/CCLayerTreeHostImplTest.cpp:

Canonical link: https://commits.webkit.org/108985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122511 268f45cc-cd09-0410-ab3c-d52691b4dbfc